fix: adjust spacing

--- a/src/App.css
+++ b/src/App.css
@@ -41,4 +41,5 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+  gap: 1em;
 }
